--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: c
 script: bash -ex .travis-ci.sh
 sudo: required
 env:
-  - UPDATE_GCC_BINUTILS=1 OCAML_VERSION=4.06 MIRAGE_MODE=hvt
+  - UPDATE_GCC_BINUTILS=1 OCAML_VERSION=4.06 MIRAGE_BACKEND=hvt
